--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-templateMsg=Hello from Local to %s!
+# Note the @...@ below instead of the standard Maven placeholder notation ${...}. This is required because of Spring.
+templateMsg=@templateMsg.per.env@
