controlling the spring profile using the maven profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 # Note the @...@ below instead of the standard Maven placeholder notation ${...}. This is required because of Spring.
-templateMsg=@templateMsg.per.env@
+spring.profiles.active=@activatedProfileThroughMaven@
