--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
-				<templateMsg.per.env>Hello from Local to %s!</templateMsg.per.env>
+				<activatedProfileThroughMaven>local</activatedProfileThroughMaven>
 			</properties>
 		</profile>
 		<profile>
 			<id>dev</id>
 			<properties>
-				<templateMsg.per.env>Hello from Dev to %s!</templateMsg.per.env>
+				<activatedProfileThroughMaven>dev</activatedProfileThroughMaven>
 			</properties>
 		</profile>
 	</profiles>
