--- a/acceptance-test/pom.xml
+++ b/acceptance-test/pom.xml
@@ -17,20 +17,20 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <cuke.version>1.2.6</cuke.version>
+        <cucumber.version>1.2.6</cucumber.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>${cuke.version}</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>${cuke.version}</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
