--- a/acceptance-test/pom.xml
+++ b/acceptance-test/pom.xml
@@ -41,24 +41,6 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>local</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <activatedProfileThroughMaven>local</activatedProfileThroughMaven>
-            </properties>
-        </profile>
-        <profile>
-            <id>dev</id>
-            <properties>
-                <activatedProfileThroughMaven>dev</activatedProfileThroughMaven>
-            </properties>
-        </profile>
-    </profiles>
-
     <build>
         <testResources>
             <testResource>
@@ -68,7 +50,38 @@
         </testResources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <parallel>methods</parallel>
+                    <threadCount>4</threadCount>
+                    <systemPropertyVariables>
+                        <cucumber.options>${cucumber.options}</cucumber.options>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <activatedProfileThroughMaven>local</activatedProfileThroughMaven>
+                <cucumber.options>--tags '@sample'</cucumber.options>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <activatedProfileThroughMaven>dev</activatedProfileThroughMaven>
+                <cucumber.options>--tags '@sample'</cucumber.options>
+            </properties>
+        </profile>
+    </profiles>
 </project>
